injected/src/features/duckplayer/assets/mobile-video-drawer.css
/* -- VIDEO PLAYER OVERLAY */
:host {
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    z-index: 10010;
    --title-size: 16px;
    --title-line-height: 20px;
    --title-gap: 16px;
    --button-gap: 6px;
    --logo-size: 32px;
    --logo-gap: 8px;
    --gutter: 16px;
}
/* iphone 15 */
@media screen and (min-width: 390px) {
    :host {
        --title-size: 20px;
        --title-line-height: 25px;
        --button-gap: 16px;
        --logo-size: 40px;
        --logo-gap: 12px;
        --title-gap: 16px;
    }
}
/* iphone 15 Pro Max */
@media screen and (min-width: 430px) {
    :host {
        --title-size: 22px;
        --title-gap: 24px;
        --button-gap: 20px;
        --logo-gap: 16px;
    }
}
/* small landscape */
@media screen and (min-width: 568px) {
}
/* large landscape */
@media screen and (min-width: 844px) {
    :host {
        --title-gap: 30px;
        --button-gap: 24px;
        --logo-size: 48px;
    }
}


:host * {
    font-family: system, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

:root *, :root *:after, :root *:before {
    box-sizing: border-box;
}

.ddg-mobile-drawer-overlay {
    --overlay-background: rgba(0, 0, 0, 0.6);
    --drawer-background: #fafafa;
    --drawer-color: rgba(0, 0, 0, 0.84);
    --button-background: rgba(0, 0, 0, 0.06);
    --button-color: rgba(0, 0, 0, 0.84);
    --button-accent-background: #3969ef;
    --button-accent-color: #fff;
    --switch-off-background: #888;
    --switch-on-background: #3969ef;
    --switch-thumb-background: #fff;
    --info-color: #000;

    --drawer-padding: 16px;
    --drawer-buffer: 48px;

    position: absolute;
    width: 100%;
    height: 100%;
}

@media (prefers-color-scheme: dark) {
    .ddg-mobile-drawer-overlay {
        /* --overlay-background: rgba(255, 255, 255, 0.6); */
        --drawer-background: #333;
        --drawer-color: rgba(255, 255, 255, 0.84);
        --button-background: rgba(255, 255, 255, 0.18);
        --button-color: #fff;
        --button-accent-background: #7295f6;
        --button-accent-color: rgba(0, 0, 0, 0.84);
        --switch-off-background: #888;
        --switch-on-background: #7295f6;
        --switch-thumb-background: #fff;
        --info-color: rgba(255, 255, 255, 0.84);
    }
}


.ddg-mobile-drawer {
    background: var(--drawer-background);
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    bottom: -100vh;
    box-sizing: border-box;
    color: var(--drawer-color);
    left: 0;
    padding: var(--drawer-padding) var(--drawer-padding) calc(var(--drawer-padding) + var(--drawer-buffer));
    position: fixed;
    width: 100%;

    box-shadow: 0px -4px 12px 0px rgba(0, 0, 0, 0.10), 0px -20px 40px 0px rgba(0, 0, 0, 0.08);
}

.animateIn {
    animation: slide-in 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 100ms 1 both;

}

.animateOut {
    animation: slide-out 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 10ms 1 both;
}

@keyframes slide-in {
    0% {
        bottom: -100vh;
    }

    100% {
        bottom: calc(-1 * var(--drawer-buffer));
    }
}

@keyframes slide-out {
    0% {
        bottom: calc(-1 * var(--drawer-buffer));
    }

    100% {
        bottom: -100vh;
    }
}

.heading {
    align-items: center;
    display: flex;
    gap: 12px;
    margin-right: 32px; /* Safe buffer for absolute-positioned info button */
}

.logo {
    flex: 0 0 32px;
    width: 32px;
    height: 32px;
}

.title {
    font-size: 19px;
    font-weight: 700;
    line-height: calc(24 / 19);
}

/* */

.buttons {
    gap: 8px;
    display: flex;
    margin-top: 16px; /* TODO: replace with parent gap */
}

.remember {
    height: 40px;
    border-radius: 8px;
    display: flex;
    gap: 16px;
    align-items: center;
    justify-content: space-between;
    padding-left: 8px;
    padding-right: 8px;
    grid-column: 1/4;
    grid-row: 5/6;

    @media screen and (min-width: 568px) {
        grid-column: 2/3;
    }
}

.button {
    flex: 1 1 50%;
    margin: 0;
    appearance: none;
    background: none;
    box-shadow: none;
    border: none;
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--button-background);
    color: var(--button-color);
    text-decoration: none;
    line-height: 16px;
    padding: 0 12px;
    font-size: 15px;
    font-weight: 600;
    border-radius: 8px;
    white-space: nowrap; /* TODO: Test on other languages */
}

.button--info {
    align-self: start;
    appearance: none;
    background: none;
    border: 0;
    height: 40px;
    margin: 0;
    padding: 12px;
    position: absolute;
    right: 0px;
    top: 0px;
    width: 40px;
}

.button--info svg {
    display: block;
    width: 16px;
    height: 16px;
}

.button--info svg path {
    fill: var(--info-color);
}

.cancel {
    min-height: 40px;
}

.open {
    background: var(--button-accent-background);
    color: var(--button-accent-color);
    text-align: center;
    min-height: 40px;
    width: 100%;

    @media screen and (min-width: 568px) {
        flex: inherit;
        padding-left: 24px;
        padding-right: 24px;
    }
}

.open:hover {
}
.cancel:hover {
}

.remember-label {
    display: flex;
    align-items: center;
    flex: 1;
}

.remember-text {
    display: block;
    font-size: 14px;
    font-weight: 700;
    line-height: calc(18 / 14);
}
.remember-checkbox {
    margin-left: auto;
    display: flex;
}

.switch {
    margin: 0;
    padding: 0;
    width: 52px;
    height: 32px;
    border: 0;
    box-shadow: none;
    background: var(--switch-off-background);
    border-radius: 32px;
    position: relative;
    transition: all .3s;
}

.switch:active .thumb {
    scale: 1.15;
}

.thumb {
    width: 20px;
    height: 20px;
    border-radius: 100%;
    background: var(--switch-thumb-background);
    position: absolute;
    top: 4px;
    left: 4px;
    pointer-events: none;
    transition: .2s left ease-in-out;
}

.switch[aria-checked="true"] {
    background: var(--switch-on-background);
}

.ios-switch {
    width: 42px;
    height: 24px;
}

.ios-switch .thumb {
    top: 2px;
    left: 2px;
    width: 20px;
    height: 20px;
    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25)
}

.ios-switch:active .thumb {
    scale: 1;
}

.ios-switch[aria-checked="true"] .thumb {
    left: calc(100% - 22px)
}

